--- a/billing-service/src/main/resources/application.properties
+++ b/billing-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=billing-service
 server.port=9083
-spring.datasource.url=jdbc:h2:mem:billing-db
-spring.h2.console.enabled=true
+spring.config.import=optional:configserver:http://localhost:5050
+
 
 
