--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=inventory-service
 server.port=9082
-spring.datasource.url=jdbc:h2:mem:inventorydb
-spring.h2.console.enabled=true
-spring.cloud.discovery.enabled=true
+spring.config.import=optional:configserver:http://localhost:5050
+
