--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=config-service
 server.port=5050
-spring.cloud.config.server.git.uri=file://C:/Users/yahya/IdeaProjects/application-ecommerce/config-repo
+spring.cloud.config.server.git.uri=https://github.com/elyahya1999/configuration-repository.git
 
